NEW - bug 330155: [releng] modularize Mylyn build https://bugs.eclipse.org/bugs/show_bug.cgi?id=330155