@@ -10,9 +10,39 @@
   <groupId>org.eclipse.mylyn.incubator</groupId>
   <artifactId>org.eclipse.mylyn.sandbox.tests</artifactId>
   <version>3.5.0-SNAPSHOT</version>
-  <packaging>eclipse-plugin</packaging>
+  <packaging>eclipse-test-plugin</packaging>
+  <properties>
+    <mylyn-incubator-test-suite>org.eclipse.mylyn.sandbox.tests.AllSandboxTests</mylyn-incubator-test-suite>
+  </properties>
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.sonatype.tycho</groupId>
+        <artifactId>maven-osgi-test-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <configuration>
+          <useUIHarness>true</useUIHarness>
+          <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
+          <product>org.eclipse.sdk.ide</product>
+          <application>org.eclipse.ui.ide.workbench</application>
+          <testSuite>org.eclipse.mylyn.sandbox.tests</testSuite>
+          <testClass>${mylyn-incubator-test-suite}</testClass>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.io.tmpdir=${project.build.directory} ${mylyn-test-args}</argLine>
+          <appArgLine>${mylyn-test-app-args}</appArgLine> 
+          <dependencies>
+            <dependency>
+              <type>p2-installable-unit</type>
+              <artifactId>org.eclipse.sdk.feature.group</artifactId>
+              <version>${platform-version}</version>
+            </dependency>
+            <dependency>
+              <type>p2-installable-unit</type>
+              <artifactId>org.eclipse.mylyn.sdk_feature.feature.group</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+          </dependencies>		  
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.sonatype.tycho</groupId>
         <artifactId>maven-osgi-source-plugin</artifactId>
